[gd_scene load_steps=5 format=3 uid="uid://bvu5oa601a3tn"]

[ext_resource type="Script" path="res://start_screen.gd" id="1_khpj1"]
[ext_resource type="AudioStream" uid="uid://dj3wr6jtc2cbu" path="res://sounds/playershoot.wav" id="2_xpwvb"]
[ext_resource type="AudioStream" uid="uid://dlq6ofgaglnk3" path="res://sounds/gruntDeath.wav" id="3_4o7p2"]

[sub_resource type="Environment" id="Environment_br6bs"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 1.5
glow_levels/2 = 1.96
glow_levels/3 = 1.36
glow_levels/4 = 0.36
glow_levels/5 = 0.36
glow_intensity = 1.27
glow_strength = 0.95
glow_bloom = 0.16
glow_blend_mode = 1
glow_hdr_threshold = 1.5

[node name="Start Screen" type="Node2D"]
script = ExtResource("1_khpj1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_br6bs")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 740.0
offset_top = 420.0
offset_right = 1180.0
offset_bottom = 530.0
theme_override_font_sizes/font_size = 80
text = "My Game 2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Button" parent="."]
offset_left = 785.0
offset_top = 600.0
offset_right = 1135.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 50
text = "Start Game
"

[node name="Quit" type="Button" parent="."]
offset_left = 880.0
offset_top = 750.0
offset_right = 1040.0
offset_bottom = 810.0
theme_override_font_sizes/font_size = 30
text = "Quit
"

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xpwvb")
volume_db = -10.987
pitch_scale = 1.48

[node name="QuitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4o7p2")
volume_db = -10.063
pitch_scale = 1.47

[connection signal="pressed" from="StartGame" to="." method="_start_game"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
